--- a/GRPC_DEMO/.project
+++ b/GRPC_DEMO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>grpcDemo</name>
+	<name>GRPC_DEMO</name>
 	<comment></comment>
 	<projects>
 	</projects>
